2014-01-01 Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/DKStruct.h
	* Headers/DBusKit.h
	* Source/DKStruct.m:
	Helper class for structure-like arrays. This is needed 
	only for variant typed arguments because these don't
	carry the introspection information that lets us decide
	whether something is an array or a D-Bus structure
	* Source/DKArgument.m:
	Support explicit structure typed arguments and start
	working on support for converting from NSData to D-Bus
	byte arrays.

2013-12-30 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKMethod.m 
	* Source/DKMethodReturn.m:
	Fix unmarshalling of arguments in an incoming D-Bus method call.

2013-12-30 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.m: Improve validity checking on object
	paths.

2013-07-10 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKOutgoingProxy.m: Add missing include. (Reported by Philippe Roussell)
	Implement some stuff missing for proper D-Bus facing objects.
	* Source/DKObjectPathNode.h: Expose another method for DKOutgoingProxy to use.
	* Source/DKPort.m: Add some debugging for object path name handling.
	* Examples/HelloWorldService/main.m: Tweak export.
	* Examples/HelloWorldService/test.xml: Add test interface. 

2013-07-02 Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/DKProxy.h
	* Source/DKProxy+Private.h
	* Source/DKProxy.m:
	Expose some DKProxy internals for subclassing.
	* Source/DKOutgoingProxy.m: Allow introspection data to be added from a
	file (not a public API, though)

2013-07-01 Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Check clang_Cursor_getArgument() since it's missing in earlier libclang versions
	* configure: Regenerate
	* ChangeLog: Reformat a few inconsistencies

2013-07-01 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKOutgoingProxy.m: Implement -handleDBusMessage: on the outgoing proxy.

2013-05-29 Niels Grewe <niels.grewe@halbordnung.de>
